1/3/13 fix: for P3P challenges, show "not a line" when guess is not a line (broken during refactoring from 0.00.44 to 0.00.45)
1/2/13 when P3P is correct, set the guess to the answer, so that equations will match
1/2/13 first pass at challenge generation for level=2
1/2/13 more challenge generation utilities to base class
1/2/13 restore challenge factory for level=1
# 0.00.45 (71486) Jan 2, 2013
1/2/13 publish a dev version with hardcoded challenges, since significant refactoring/rewriting has been done since previous version
1/2/13 break out challenge generation into separate factories for each level, single they are quite complicated
1/2/13 more refinement of level=1 challenge generation
1/2/13 fixes and additional constraints for level=1 challenges
1/2/13 first pass at challenge generation for level=1
1/2/13 use list instead of array for challenges
12/27/12 move createEquationNode to ChallengeNode base class
12/27/12 move correct/incorrect icons into EquationBoxNode
12/27/12 move more duplicated code into ChallengeNode base class
12/27/12 standardize rendering order in ChallengeNode subclasses
12/27/12 move most (but not all) duplicate code into ChallengeNode base class
12/27/12 delete redundant visibility updates in Check button handler
12/27/12 move visibility changes into model game-state observer
12/27/12 move title creation to ChallengeNode base class
12/27/12 fix: call IChallenge.setAnswerVisible when "Next" button is visible, so that point tools see the answer line
12/27/12 standardize order of lines that are provided to point tool
12/27/12 move enums to top-level class files
12/27/12 improve model sync in P3P_GraphNode
12/27/12 move duplicate code into GTL_GraphNode base class
12/27/12 make LineNode non-abstract, with no equation by default (useful in game)
12/27/12 fix default title for MTE challenges
12/27/12 make P3P_Challenge extend MatchChallenge, instead of being a different type of challenge